--- a/simon.html
+++ b/simon.html
@@ -12,11 +12,14 @@
     <h1>Simon game</h1>
     <h3>Do what Simon says</h3>
     <p>Follow the pattern of colours, for as long as you can... if you can!</p>
+    <button id="play-butn" type="button">PLAY</button>
     <main>
         <button id="red-butn" type="button">red</button>
         <button id="blue-butn" type="button">blue</button>
         <button id="green-butn" type="button">green</button>
         <button id="yellow-butn" type="button">yellow</button>
     </main>
+
+    <h5 id="score-id">SCORE: <i>0</i> </h5>
 </body>
 </html>
