--- a/simon.html
+++ b/simon.html
@@ -19,7 +19,7 @@
         <button id="green-butn" type="button">green</button>
         <button id="yellow-butn" type="button">yellow</button>
     </main>
-
     <h5 id="score-id">SCORE: <i>0</i> </h5>
+    <h5 id="high-score">HIGH SCORE: <i>0</i> </h5>
 </body>
 </html>
