--- a/simon-game.html
+++ b/simon-game.html
@@ -9,17 +9,21 @@
     <script type="module" src="./simon-game.js"></script>
 </head>
 <body>
-    <div id="cont" class="container">
+    <div id="cont">
         <h1>Simon game</h1>
         <div>
             <h3>Do what Simon says</h3>
             <p>Follow the pattern of colours, for as long as you can... if you can!</p>
         </div>
         <main>
-            <button id="red-butn" type="button">red</button>
-            <button id="blue-butn" type="button">blue</button>
-            <button id="green-butn" type="button">green</button>
-            <button id="yellow-butn" type="button">yellow</button>
+            <div class="container">
+                <button id="red-butn" type="button"></button>
+                <button id="blue-butn" type="button"></button>
+            </div>
+            <div class="container">
+                <button id="green-butn" type="button"></button>
+                <button id="yellow-butn" type="button"></button>
+            </div>
         </main>
         <h5 id="score-id">SCORE: <i>0</i> </h5>
         <h5 id="high-score">HIGH SCORE: <i>0</i> </h5>
