--- a/simon-game.html
+++ b/simon-game.html
@@ -8,7 +8,7 @@
     <title>Simon</title>
     <script type="module" src="./simon-game.js"></script>
 </head>
-<body>
+<body id="simon">
     <div id="cont">
         <h1>Simon game</h1>
         <div>
@@ -16,11 +16,11 @@
             <p>Follow the pattern of colours, for as long as you can... if you can!</p>
         </div>
         <main>
-            <div class="container">
+            <div class="container1">
                 <button id="red-butn" type="button"></button>
                 <button id="blue-butn" type="button"></button>
             </div>
-            <div class="container">
+            <div class="container1">
                 <button id="green-butn" type="button"></button>
                 <button id="yellow-butn" type="button"></button>
             </div>
