added reset functionality and  some styling

--- a/simon-game.html
+++ b/simon-game.html
@@ -27,6 +27,7 @@
         </main>
         <h5 id="score-id">SCORE: <i>0</i> </h5>
         <h5 id="high-score">HIGH SCORE: <i>0</i> </h5>
+        <div id="reset-butn">RESET</div>
     </div>
 </body>
 </html>
