--- a/simon.html
+++ b/simon.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div id="cont" class="container">
-        <h1>Simon game</h1>
+        <h1 id="ph1">Simon game</h1>
         <div>
-            <h3>Do what Simon says</h3>
-            <p>Follow the pattern of colours, for as long as you can... if you can!</p>
+            <h3 id="ph3">Do what Simon says</h3>
+            <p id="pp">Follow the pattern of colours, for as long as you can... if you can!</p>
             <a href="./simon-game.html">
-                <button id="play-butn" type="button">PLAY</button>
-
-            </a>
+                <button id="play-butn" type="onClick">PLAY</button>
+                                                        
+            </a> 
         </div>
     </div>
     
